Cleaning pom.xml